Fix invisible links in light theme

--- a/mkdocs/overrides/assets/stylesheets/extra.css
+++ b/mkdocs/overrides/assets/stylesheets/extra.css
@@ -52,7 +52,7 @@
 }
 
 [data-md-color-scheme=default][data-md-color-primary=indigo] {
-    --md-typeset-a-color: var(--md-primary-fg-color--dark);
+    --md-typeset-a-color: var(--md-primary-fg-color--light);
     --md-accent-fg-color: var(--md-primary-fg-color);
     --md-default-bg-color--light: #DDD;
     --md-footer-bg-color--dark: var(--md-primary-fg-color--dark);
